--- a/css/style.css
+++ b/css/style.css
@@ -863,7 +863,7 @@ ul.infomaco li a {
 
 .footer {
      padding-top: 220px;
-     background: #1f1d47;
+     background: #8e8bd1;
      border: #fff solid 20px;
      border-right: 0 !important;
      position: relative;
